[package]
name = "bomberust-client"
version = "0.1.0"
authors = ["Sébastien Blin <amarok@enconn.fr>"]
edition = "2018"

[dependencies]
env_logger = "0.5.6"
log = "0.4.1"
failure = "0.1"
futures="0.1.28"
rand="0.7"
rmp-serde = "0.14.0"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0"
termion = "1.5"
tokio = { version = "0.1.6" }
tokio-rustls="0.10"
tokio-stdin-stdout="0.1.5"
tui = "0.5"
typetag = "0.1"
webpki="0.21"
webpki-roots="0.17"
